2016-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	6.1 release.
	* configure.ac, NEWS, util/texi2dvi, util/texi2pdf,
	doc/refcard/txirefcard.tex, texindex/texindex.awk,
	texindex/texindex.in: Version number.
	* build-aux/texinfo.tex: Update from doc/texinfo.tex.

2016-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Update notes about making a release.  Move 
	"make po-check" line.  Remove "rm ti.texi" for updating texindex 
	version.  Move gnulib-tool --add-import and util/srclist-txi, 
	and say what the latter is for.  Move "official releases only" 
	section only so that the "make distcheck" line above can be the 
	final command to produce the release tarball.  Move upload 
	instructions after this command.  Move instructions about 
	tagging source tree.  Combine instructions about checking DTD.

2016-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi,
	* doc/Makefile.am,
	* doc/info-stnd.texi,
	* Makefile.am,
	* info/Makefile.am: 2016.

2016-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Change "cross reference" to "cross-reference"
	throughout.

2016-02-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Mention that behaviour is unchanged for comma or full 
	stop following closing brace of @xref command.  Text from Karl Berry.
	* NEWS: Change word 'makeinfo' to 'texi2any'.
	* doc/texinfo.texi (Cross Reference Parts): Mention how to avoid 
	an unwanted comma after the cross-reference when processing with 
	TeX.

	* NEWS, doc/texinfo.texi (Cross Reference Parts): Move example 
	of comma insertion.  Suggestion from Karl Berry.

2016-02-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\xrefX): Check for some commands following 
	the closing brace of an @xref command which add space.  
	Suggestion from Karl Berry.

	* doc/texinfo-tex-test.texi (Cross-references): Add examples 
	with tab, newline, @SPACE, @TAB, @NL, @*, and @: following 
	@xref.
